# tts

./: .gitignore  MANIFEST.in  README.md  help.txt  pyproject.toml  run.bat  settings.ini  settings.ini.example
docs/: PROJECT_REVIEW.md
resources/: style.qss
tts_app/: __init__.py  main.py
tts_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tts_app/audio/: __init__.py  player.py
tts_app/config/: __init__.py  settings.py
tts_app/ui/: __init__.py  main_window.py  settings_dialog.py  status_dots.py
